--- a/views/index.html
+++ b/views/index.html
@@ -33,6 +33,24 @@
     </span>
     <script src="http://code.angularjs.org/1.2.9/angular.min.js"></script>
     <script src="/javascripts/my_app.js"></script>
+
+<form id="commentForm" action="">
+<label for="name" >Name: </label><input type="text" id="name" placeholder="Name"><br>
+<label for="comment">Comment: </label><input type="text" id="comment" placeholder="Comment"><br>
+<label for="avatar">Avatar URL: </label><input type="text" id="avatar" placeholder="URL"><br>
+</form>
+
+<button id="postComment">Post Comment</button>
+<button id="getComments">Show Comments</button>
+<button id="deleteComments">Delete All</button>
+
+<br><br>
+
+<div id="json"></div>
+<div id="done"></div>
+<div id="comments">
+
+</div>
 </body>
       
 </html>
