--- a/views/user.html
+++ b/views/user.html
@@ -15,7 +15,7 @@
             <input type="text" id="username" name="username" ng-model="user.username" disabled><br>
             <label>Email:</label>
             <input type="email" id="email" name="email" ng-model="user.email"><br>          
-            <label>Favorite Color:</label>
+            <label>Hobbies:</label>
             <input type="text" id="color" name="color" ng-model="user.color"><br>  
             <label>Profile picture:</label>
             <input type="text" id="profile_picture" name="profile_picture" ng-model="user.profile_picture"><br>  
